tests/ui/impl-trait/issues/issue-86800.stderr
error: item does not constrain `TransactionFuture::{opaque#0}`
  --> $DIR/issue-86800.rs:24:4
   |
LL | fn execute_transaction_fut<'f, F, O>(
   |    ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/issue-86800.rs:21:34
   |
LL | type TransactionFuture<'__, O> = impl '__ + Future<Output = TransactionResult<O>>;
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: item does not constrain `TransactionFuture::{opaque#0}`
  --> $DIR/issue-86800.rs:37:14
   |
LL |     async fn do_transaction<O>(
   |              ^^^^^^^^^^^^^^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/issue-86800.rs:21:34
   |
LL | type TransactionFuture<'__, O> = impl '__ + Future<Output = TransactionResult<O>>;
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: item does not constrain `TransactionFuture::{opaque#0}`
  --> $DIR/issue-86800.rs:41:31
   |
LL |       ) -> TransactionResult<O> {
   |  _______________________________^
LL | |
LL | |
LL | |         let mut conn = Connection {};
LL | |         let mut transaction = TestTransaction { conn: &mut conn };
LL | |         f(&mut transaction).await
LL | |     }
   | |_____^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/issue-86800.rs:21:34
   |
LL | type TransactionFuture<'__, O> = impl '__ + Future<Output = TransactionResult<O>>;
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/issue-86800.rs:31:5
   |
LL | type TransactionFuture<'__, O> = impl '__ + Future<Output = TransactionResult<O>>;
   |                        --- this generic parameter must be used with a generic lifetime parameter
...
LL |     f
   |     ^

error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/issue-86800.rs:41:31
   |
LL |   type TransactionFuture<'__, O> = impl '__ + Future<Output = TransactionResult<O>>;
   |                          --- this generic parameter must be used with a generic lifetime parameter
...
LL |       ) -> TransactionResult<O> {
   |  _______________________________^
LL | |
LL | |
LL | |         let mut conn = Connection {};
LL | |         let mut transaction = TestTransaction { conn: &mut conn };
LL | |         f(&mut transaction).await
LL | |     }
   | |_____^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0792`.
